--- a/tutorial/bg_info/tutorial_julesrose/advanced_quiz.html
+++ b/tutorial/bg_info/tutorial_julesrose/advanced_quiz.html
@@ -53,6 +53,7 @@
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
                                 <li><a href="jr_structures.html">JULES structures</a></li>
+                                <li><a href="jr_rosecylc_setup.html">Rose/Cylc set-up</a></li>
                             </ul>
                         </li>
                     </ul>
