--- a/tutorial/bg_info/tutorial_julesrose/index.html
+++ b/tutorial/bg_info/tutorial_julesrose/index.html
@@ -54,6 +54,7 @@
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
                                 <li><a href="jr_structures.html">JULES structures</a></li>
+                                <li><a href="jr_rosecylc_setup.html">Rose/Cylc set-up</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -79,7 +80,9 @@
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
-                                <li><a href="jr_structures.html">JULES structures</a></li>                            </ul>
+                                <li><a href="jr_structures.html">JULES structures</a></li>
+                                <li><a href="jr_rosecylc_setup.html">Rose/Cylc set-up</a></li>
+                            </ul>
 
 
         </div>
