--- a/tutorial/bg_info/tutorial_julesrose/jr_beginner.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_beginner.html
@@ -15,8 +15,8 @@
         <link href="../etc/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
         <!-- Custom styles for this template -->
         <link href="general_theme.css" rel="stylesheet" />
-</head>
-dy>
+     </head>
+    <body>
         <!-- Fixed navbar -->
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
@@ -71,6 +71,7 @@ dy>
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
                                 <li><a href="jr_structures.html">JULES structures</a></li>
+                                <li><a href="jr_rosecylc_setup.html">Rose/Cylc set-up</a></li>
                             </ul>
                         </li>
                     </ul>
