--- a/tutorial/bg_info/tutorial_julesrose/jr_links.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_links.html
@@ -50,6 +50,7 @@
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
                                 <li><a href="jr_structures.html">JULES structures</a></li>
+                                <li><a href="jr_rosecylc_setup.html">Rose/Cylc set-up</a></li>
                             </ul>
                         </li>
                     </ul>
