--- a/tutorial/bg_info/tutorial_julesrose/jr_mqrg.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_mqrg.html
@@ -64,6 +64,7 @@
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
                                 <li><a href="jr_structures.html">JULES structures</a></li>
+                                <li><a href="jr_rosecylc_setup.html">Rose/Cylc set-up</a></li>
                             </ul>
                         </li>
                     </ul>
