--- a/tutorial/bg_info/tutorial_julesrose/jr_links.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_links.html
@@ -86,6 +86,14 @@
                 <a href="https://github.com/metomi/metomi-vms/tree/master/usr/local/bin">Location of the install-jules-* scripts on GitHub</a>
                 </br>
                 </br>
+                <h2>JASMIN and MoNSooN (JULES) Links</h2>
+                <a href="https://code.metoffice.gov.uk/trac/jules/wiki/RoseJULESonJASMIN">JASMIN (JULES)</a>
+                </br>
+                <a href="https://code.metoffice.gov.uk/trac/jules/wiki???">MoNSooN (JULES)</a> Not avaliable yet.
+ </br>
+                </br>
+                </br>
+
                 <h2>Rose/Cylc Links</h2>
                 <a href="http://metomi.github.io/rose/doc/rose.html">Rose Documentation</a>
                 </br>
